--- a/random-image-project/index.html
+++ b/random-image-project/index.html
@@ -8,7 +8,7 @@
     <title>Random Image Feed</title>
   </head>
   <body>
-    <h1 class="title">2021 Yılı Anlar</h1>
+    <h1 class="title">HOTHEAD01TH</h1>
     <div class="container"></div>
 
     <script src="app.js"></script>
